# SofaScore

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  benchmark.py  cli.py  config.py  db.py  logging_utils.py  main.py  poller.py  schemas.py
app/sources/: __init__.py  football_data.py
benchmarks/: latest.txt
data/: sofascore.db
fixtures/: live_payload.json
migrations/: 001_init.sql
tests/: test_football_data_polling.py  test_live_api.py
